Updated Setting Ad manager

--- a/settings.json
+++ b/settings.json
@@ -1,20 +1,20 @@
 {
-  "base" : "https://plusads.github.io/GTUPapers",
-  "department_path" : "/departments.json",
-  "subject_path" : "/",
-  "pdf_path" : "/pdf/"
-   "ad_manager" : {
-    "deparments_banner" : {
-        "status" : true
+  "base": "https://plusads.github.io/GTUPapers",
+  "department_path": "/departments.json",
+  "subject_path": "/",
+  "pdf_path": "/pdf/",
+  "ad_manager": {
+    "deparments_banner": {
+      "status": true
     },
-    "subject_interstitial" : {
-        "status" : true
+    "subject_interstitial": {
+      "status": true
     },
-    "pdf_reward" : {
-        "status" : true
+    "pdf_reward": {
+      "status": true
     },
-    "pdf_banner" : {
-        "status" : true
+    "pdf_banner": {
+      "status": true
     }
   }
 }
