--- a/settings.json
+++ b/settings.json
@@ -1,4 +1,5 @@
 {
+  "version" : "1.0.1",
   "base": "https://plusads.github.io/GTUPapers",
   "department_path": "/departments.json",
   "subject_path": "/",
